# neural-net-C

./: CMakeLists.txt  README.md
docs/reqs/: impl_reqs.yaml  sys_reqs.yaml
docs/reqs/puml_repr/: ImplRs.puml  SysRs.puml
docs/structure/: file_layout.puml
include/: main.h  neural_net.h  partial_d.h
lib/: CMakeLists.txt
lib/mats/: CMakeLists.txt
lib/mats/include/: matrix.h
lib/mats/src/: matrix.c
src/: main.c  neural_net.c  partial_d.c
